<resources>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_home_description_format">%1$s, %2$s</string>
    <string name="abc_action_bar_home_subtitle_description_format">%1$s, %2$s, %3$s</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="accept">Accept</string>
    <string name="cast_ad_label">Ad</string>
    <string name="cast_casting_to_device">Casting to %1$s</string>
    <string name="cast_closed_captions">Closed captions</string>
    <string name="cast_closed_captions_unavailable">Closed captions unavailable</string>
    <string name="cast_disconnect">Disconnect</string>
    <string name="cast_expanded_controller_ad_image_description">Image displayed while the cast receiver is playing an ad</string>
    <string name="cast_expanded_controller_ad_in_progress">Ad in progress…</string>
    <string name="cast_expanded_controller_background_image">Album art</string>
    <string name="cast_expanded_controller_live_stream_indicator">Live stream</string>
    <string name="cast_expanded_controller_loading">Loading…</string>
    <string name="cast_expanded_controller_skip_ad_label">Skip</string>
    <string name="cast_forward">Forward</string>
    <string name="cast_forward_10">Forward ten seconds</string>
    <string name="cast_forward_30">Forward thirty seconds</string>
    <string name="cast_intro_overlay_button_text">@android:string/ok</string>
    <string name="cast_mute">Mute</string>
    <string name="cast_notification_connected_message">Connected to %1$s</string>
    <string name="cast_notification_connecting_message">Connecting to %1$s</string>
    <string name="cast_notification_disconnect">Disconnect</string>
    <string name="cast_pause">Pause</string>
    <string name="cast_play">Play</string>
    <string name="cast_rewind">Rewind</string>
    <string name="cast_rewind_10">Rewind ten seconds</string>
    <string name="cast_rewind_30">Rewind thirty seconds</string>
    <string name="cast_seek_bar">Playback seek control</string>
    <string name="cast_skip_next">Skip to next item</string>
    <string name="cast_skip_prev">Skip to previous item</string>
    <string name="cast_stop">Stop</string>
    <string name="cast_stop_live_stream">Stop live stream</string>
    <string name="cast_tracks_chooser_dialog_audio">Audio</string>
    <string name="cast_tracks_chooser_dialog_cancel">Cancel</string>
    <string name="cast_tracks_chooser_dialog_closed_captions">Closed Captions</string>
    <string name="cast_tracks_chooser_dialog_default_track_name">Track %1$d</string>
    <string name="cast_tracks_chooser_dialog_no_audio_tracks">No Audio Tracks Available</string>
    <string name="cast_tracks_chooser_dialog_no_text_tracks">No Text Tracks Available</string>
    <string name="cast_tracks_chooser_dialog_none">None</string>
    <string name="cast_tracks_chooser_dialog_ok">OK</string>
    <string name="cast_tracks_chooser_dialog_subtitles">Subtitles</string>
    <string name="cast_unmute">Unmute</string>
    <string name="com_accountkit_button_begin">Begin</string>
    <string name="com_accountkit_button_cancel">Cancel</string>
    <string name="com_accountkit_button_confirm">Confirm</string>
    <string name="com_accountkit_button_continue">Continue</string>
    <string name="com_accountkit_button_edit">EDIT</string>
    <string name="com_accountkit_button_log_in">Log In</string>
    <string name="com_accountkit_button_next">Next</string>
    <string name="com_accountkit_button_ok">OK</string>
    <string name="com_accountkit_button_resend_code_in">Resend code in %1$s</string>
    <string name="com_accountkit_button_resend_sms">Resend Code</string>
    <string name="com_accountkit_button_send">Send</string>
    <string name="com_accountkit_button_send_code_in_fb">Send Code in Facebook</string>
    <string name="com_accountkit_button_send_code_in_fb_disclosure">Tap Send Code in Facebook to send a notification to the Facebook account linked to the phone number you entered.</string>
    <string name="com_accountkit_button_start">Start</string>
    <string name="com_accountkit_button_start_over">Try Again</string>
    <string name="com_accountkit_button_submit">Submit</string>
    <string name="com_accountkit_check_email">Open your Email</string>
    <string name="com_accountkit_code_sent_to">"We sent the code to
%1$s"</string>
    <string name="com_accountkit_confirmation_code_agreement">"Tap %1$s to accept Facebook's &lt;a href=%2$s>Terms&lt;/a>, &lt;a href=%3$s>Data Policy&lt;/a> and &lt;a href=%4$s>cookie use&lt;/a>."</string>
    <string name="com_accountkit_confirmation_code_agreement_app_privacy_policy">"Tap %1$s to accept Facebook's &lt;a href=%2$s>Terms&lt;/a>, &lt;a href=%3$s>Data Policy&lt;/a>, &lt;a href=%4$s>cookie use&lt;/a> and the &lt;a href=%5$s>Privacy Policy&lt;/a> of %6$s."</string>
    <string name="com_accountkit_confirmation_code_agreement_app_privacy_policy_and_terms">"Tap %1$s to accept Facebook's &lt;a href=%2$s>Terms&lt;/a>, &lt;a href=%3$s>Data Policy&lt;/a>, &lt;a href=%4$s>cookie use&lt;/a> and the &lt;a href=%5$s>Privacy Policy&lt;/a> and &lt;a href=%6$s>Terms of Service&lt;/a> of %7$s."</string>
    <string name="com_accountkit_confirmation_code_text">"Didn't get code?"</string>
    <string name="com_accountkit_confirmation_code_title">Enter your code</string>
    <string name="com_accountkit_email_invalid">This email is incorrect. Please try again.</string>
    <string name="com_accountkit_email_loading_title">Sending email…</string>
    <string name="com_accountkit_email_login_retry_title">Confirm your email</string>
    <string name="com_accountkit_email_login_text">"Tap %1$s to get an email confirmation from Account Kit by Facebook to help you use %2$s. You don't need a Facebook account to use it. &lt;a href=%3$s>Learn how Facebook uses your info&lt;/a>."</string>
    <string name="com_accountkit_email_login_title">Enter your email address</string>
    <string name="com_accountkit_email_not_received">Resend Email</string>
    <string name="com_accountkit_email_verify_title">Open the email and confirm your address</string>
    <string name="com_accountkit_error_title">"We're sorry, something went wrong."</string>
    <string name="com_accountkit_facebook_code_entry_title">Enter your code from Facebook</string>
    <string name="com_accountkit_phone_loading_title">Sending your code…</string>
    <string name="com_accountkit_phone_login_retry_title">Confirm your phone number</string>
    <string name="com_accountkit_phone_login_text">"Tap %1$s to get an SMS confirmation from Account Kit by Facebook to help you use %2$s. You don't need a Facebook account to use it. Message and data rates may apply. &lt;a href=%3$s>Learn how Facebook uses your info&lt;/a>."</string>
    <string name="com_accountkit_phone_login_title">Enter your phone number</string>
    <string name="com_accountkit_resend_check">Please check the number before resending code.</string>
    <string name="com_accountkit_resend_email_text">Send New Email</string>
    <string name="com_accountkit_resend_title">"We're sorry. Try these options to continue."</string>
    <string name="com_accountkit_return_title">Taking you back to %1$s…</string>
    <string name="com_accountkit_sent_title">Sent!</string>
    <string name="com_accountkit_success_title">Done!</string>
    <string name="com_accountkit_toolbar_title">Log Into %1$s</string>
    <string name="com_accountkit_verify_confirmation_code_title">"We couldn't verify your code.
Please try again:"</string>
    <string name="com_accountkit_verify_title">Verifying your code…</string>
    <string name="com_facebook_device_auth_instructions">Visit &lt;b>facebook.com/device&lt;/b> and enter the code shown above.</string>
    <string name="com_facebook_image_download_unknown_error">Unexpected error while downloading an image.</string>
    <string name="com_facebook_internet_permission_error_message">WebView login requires INTERNET permission</string>
    <string name="com_facebook_internet_permission_error_title">AndroidManifest Error</string>
    <string name="com_facebook_like_button_liked">Liked</string>
    <string name="com_facebook_like_button_not_liked">Like</string>
    <string name="com_facebook_loading">Loading…</string>
    <string name="com_facebook_loginview_cancel_action">Cancel</string>
    <string name="com_facebook_loginview_log_in_button">Log in</string>
    <string name="com_facebook_loginview_log_in_button_continue">Continue with Facebook</string>
    <string name="com_facebook_loginview_log_in_button_long">Log in with Facebook</string>
    <string name="com_facebook_loginview_log_out_action">Log out</string>
    <string name="com_facebook_loginview_log_out_button">Log out</string>
    <string name="com_facebook_loginview_logged_in_as">Logged in as: %1$s</string>
    <string name="com_facebook_loginview_logged_in_using_facebook">Logged in using Facebook</string>
    <string name="com_facebook_send_button_text">Send</string>
    <string name="com_facebook_share_button_text">Share</string>
    <string name="com_facebook_smart_device_instructions">To connect your account, open the Facebook app on your mobile device and check for notifications.</string>
    <string name="com_facebook_smart_device_instructions_or">- OR -</string>
    <string name="com_facebook_smart_login_confirmation_cancel">Not you?</string>
    <string name="com_facebook_smart_login_confirmation_title">Confirm Login</string>
    <string name="com_facebook_tooltip_default">"You're in control - choose what info you want to share with apps."</string>
    <string name="common_google_play_services_enable_button">Enable</string>
    <string name="account_manager">账号中心</string>
    <string name="account_regist">账号注册</string>
    <string name="agree">我同意</string>
    <string name="and">和</string>
    <string name="back">返回</string>
    <string name="bind_account_tip">绑定官方账号，送价值10$大礼包</string>
    <string name="change_account">切换账号</string>
    <string name="click_bind">点击绑定</string>
    <string name="edit_bind_account">请输入有效邮箱账号</string>
    <string name="edit_bind_password_again">请再次输入密码</string>
    <string name="edit_hint_password">请输入密码</string>
    <string name="finish">关闭</string>
    <string name="forget_password">忘记密码</string>
    <string name="my_record">我的记录</string>
    <string name="normal_problem">常见问题</string>
    <string name="not_bound">未绑定</string>
    <string name="offical_account">官方账号：</string>
    <string name="online_commit">在线提交</string>
    <string name="online_service">联系客服</string>
    <string name="other_account">其他账号：</string>
    <string name="privacy_agreement">隐私协议</string>
    <string name="regist_and_login">注册并登录</string>
    <string name="reset_password">重置密码</string>
    <string name="service_provision">服务条款</string>
</resources>