<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:gravity="center" android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout android:orientation="vertical" android:background="@mipmap/icon_background3" android:layout_width="@dimen/layout_340" android:layout_height="@dimen/layout_300">
        <RelativeLayout android:layout_width="fill_parent" android:layout_height="@dimen/layout_50">
            <LinearLayout android:gravity="center_vertical" android:orientation="horizontal" android:id="@id/regist_account_back" android:layout_width="wrap_content" android:layout_height="@dimen/layout_18" android:layout_marginLeft="@dimen/layout_10" android:layout_marginTop="@dimen/layout_15">
                <ImageView android:layout_width="@dimen/layout_18" android:layout_height="@dimen/layout_18" android:src="@mipmap/icon_back" />
                <TextView android:textSize="@dimen/text_15" android:textColor="@color/colorTitleText" android:gravity="center_vertical" android:layout_gravity="center_vertical" android:layout_width="wrap_content" android:layout_height="fill_parent" android:text="@string/back" />
            </LinearLayout>
            <TextView android:textSize="@dimen/text_25" android:textColor="@color/colorTitleText" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/account_regist" android:layout_centerInParent="true" />
        </RelativeLayout>
        <EditText android:textSize="@dimen/text_17" android:textColor="@color/black" android:textColorHint="@color/colorHintText" android:gravity="center" android:id="@id/regist_account_edit_account" android:background="@drawable/edittext_bg" android:layout_width="fill_parent" android:layout_height="@dimen/layout_40" android:layout_marginLeft="@dimen/layout_20" android:layout_marginTop="@dimen/layout_10" android:layout_marginRight="@dimen/layout_20" android:hint="@string/edit_bind_account" />
        <EditText android:textSize="@dimen/text_17" android:textColor="@color/black" android:textColorHint="@color/colorHintText" android:gravity="center" android:id="@id/regist_account_edit_password" android:background="@drawable/edittext_bg" android:layout_width="fill_parent" android:layout_height="@dimen/layout_40" android:layout_marginLeft="@dimen/layout_20" android:layout_marginTop="@dimen/layout_10" android:layout_marginRight="@dimen/layout_20" android:hint="@string/edit_hint_password" android:inputType="textPassword" />
        <EditText android:textSize="@dimen/text_17" android:textColor="@color/black" android:textColorHint="@color/colorHintText" android:gravity="center" android:id="@id/regist_account_edit_password_again" android:background="@drawable/edittext_bg" android:layout_width="fill_parent" android:layout_height="@dimen/layout_40" android:layout_marginLeft="@dimen/layout_20" android:layout_marginTop="@dimen/layout_10" android:layout_marginRight="@dimen/layout_20" android:hint="@string/edit_bind_password_again" android:inputType="textPassword" />
        <RelativeLayout android:layout_width="fill_parent" android:layout_height="@dimen/layout_25" android:layout_marginLeft="@dimen/layout_20" android:layout_marginTop="@dimen/layout_10" android:layout_marginRight="@dimen/layout_20">
            <CheckBox android:id="@id/regist_account_check" android:layout_width="@dimen/layout_25" android:layout_height="@dimen/layout_25" android:checked="true" android:button="@drawable/checkbox" android:layout_centerVertical="true" />
            <TextView android:textSize="@dimen/text_12" android:textColor="@color/colorHintText" android:gravity="center_vertical" android:id="@id/agree_login" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="@dimen/layout_5" android:text="@string/agree" android:layout_toRightOf="@id/regist_account_check" android:layout_centerVertical="true" />
            <TextView android:textSize="@dimen/text_12" android:textColor="@color/colorBackground" android:gravity="center_vertical" android:id="@id/regist_account_service" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/service_provision" android:layout_toRightOf="@id/agree_login" android:layout_centerVertical="true" />
            <View android:background="@color/colorBackground" android:layout_width="wrap_content" android:layout_height="1.0dip" android:layout_below="@id/regist_account_service" android:layout_alignLeft="@id/regist_account_service" android:layout_alignRight="@id/regist_account_service" />
            <TextView android:textSize="@dimen/text_12" android:textColor="@color/colorHintText" android:gravity="center_vertical" android:id="@id/login_and" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/and" android:layout_toRightOf="@id/regist_account_service" android:layout_centerVertical="true" />
            <TextView android:textSize="@dimen/text_12" android:textColor="@color/colorBackground" android:gravity="center_vertical" android:id="@id/regist_account_privacy" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/privacy_agreement" android:layout_toRightOf="@id/login_and" android:layout_centerVertical="true" />
            <View android:background="@color/colorBackground" android:layout_width="wrap_content" android:layout_height="@dimen/layout_1" android:layout_below="@id/regist_account_privacy" android:layout_alignLeft="@id/regist_account_privacy" android:layout_alignRight="@id/regist_account_privacy" />
        </RelativeLayout>
        <Button android:textSize="@dimen/text_15" android:textColor="@color/colorTitleText" android:layout_gravity="center" android:id="@id/regist_account_button_regist" android:background="@drawable/button_bg1" android:layout_width="@dimen/layout_150" android:layout_height="@dimen/layout_40" android:layout_marginTop="@dimen/layout_10" android:text="@string/regist_and_login" />
    </LinearLayout>
</LinearLayout>