<?xml version="1.0" encoding="utf-8"?>
<com.facebook.accountkit.ui.ConstrainedLinearLayout style="@style/AccountKit.Container"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <TextView android:gravity="center_horizontal" android:id="@id/com_accountkit_accountkit_resend_check" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/com_accountkit_resend_check" style="@style/AccountKit.AgreementText" />
    <Space android:layout_width="fill_parent" android:layout_height="@dimen/com_accountkit_vertical_spacer_small_height" />
    <Button android:id="@id/com_accountkit_resend_button" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/com_accountkit_button_resend_sms" style="@style/AccountKit.Button" />
    <Space android:layout_width="fill_parent" android:layout_height="@dimen/com_accountkit_vertical_spacer_small_height" />
    <LinearLayout android:gravity="center" android:orientation="vertical" android:id="@id/com_accountkit_send_in_fb" android:layout_width="fill_parent" android:layout_height="wrap_content">
        <Button android:id="@id/com_accountkit_send_in_fb_button" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/com_accountkit_button_send_code_in_fb" style="@style/AccountKit.Button" />
        <Space android:layout_width="fill_parent" android:layout_height="@dimen/com_accountkit_vertical_spacer_small_height" />
        <TextView android:gravity="center_horizontal" android:id="@id/com_accountkit_button_send_code_in_fb_disclosure" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/com_accountkit_button_send_code_in_fb_disclosure" style="@style/AccountKit.AgreementText" />
    </LinearLayout>
</com.facebook.accountkit.ui.ConstrainedLinearLayout>