<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:gravity="center" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout android:orientation="vertical" android:background="@mipmap/icon_background2" android:layout_width="@dimen/layout_340" android:layout_height="@dimen/layout_300">
        <RelativeLayout android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="@dimen/layout_50">
            <TextView android:textSize="@dimen/text_25" android:textColor="@color/colorTitleText" android:gravity="center" android:layout_width="wrap_content" android:layout_height="fill_parent" android:text="@string/account_manager" android:layout_centerInParent="true" />
            <TextView android:textSize="@dimen/text_15" android:textColor="@color/colorTitleText" android:id="@id/account_manager_finish" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="@dimen/layout_18" android:layout_marginRight="@dimen/layout_10" android:text="@string/finish" android:layout_alignParentRight="true" />
        </RelativeLayout>
        <LinearLayout android:gravity="center_vertical" android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="@dimen/layout_20" android:layout_marginLeft="@dimen/layout_5" android:layout_marginTop="@dimen/layout_10" android:layout_marginRight="@dimen/layout_5">
            <ImageView android:id="@id/account_manager_logo" android:layout_width="@dimen/layout_20" android:layout_height="@dimen/layout_20" android:layout_marginLeft="@dimen/layout_10" />
            <TextView android:textSize="@dimen/text_15" android:textColor="@color/colorBackground" android:gravity="center_vertical" android:id="@id/account_manager_text" android:layout_width="wrap_content" android:layout_height="fill_parent" android:layout_marginLeft="@dimen/layout_10" />
        </LinearLayout>
        <LinearLayout android:orientation="horizontal" android:background="@drawable/edittext_bg" android:layout_width="fill_parent" android:layout_height="@dimen/layout_40" android:layout_marginLeft="@dimen/layout_20" android:layout_marginTop="@dimen/layout_10" android:layout_marginRight="@dimen/layout_20">
            <LinearLayout android:background="@color/colorEditBackground" android:layout_width="@dimen/layout_220" android:layout_height="fill_parent">
                <TextView android:textSize="@dimen/text_15" android:textColor="@color/colorHintText" android:ellipsize="middle" android:gravity="center_vertical" android:id="@id/textView" android:paddingRight="@dimen/layout_5" android:layout_width="0.0dip" android:layout_height="fill_parent" android:layout_marginLeft="@dimen/layout_5" android:text="@string/offical_account" android:maxLines="1" android:layout_weight="3.0" />
                <TextView android:textSize="@dimen/text_15" android:textColor="@color/colorHintText" android:ellipsize="middle" android:gravity="center" android:id="@id/account_manager_account_state" android:layout_width="0.0dip" android:layout_height="fill_parent" android:layout_marginLeft="@dimen/layout_5" android:layout_marginRight="@dimen/layout_5" android:text="@string/not_bound" android:maxLines="1" android:layout_weight="3.0" />
            </LinearLayout>
            <Button android:textSize="@dimen/text_15" android:textColor="@color/colorTitleText" android:ellipsize="middle" android:id="@id/account_manager_bind_account" android:background="@mipmap/icon_button_bg1" android:layout_width="@dimen/layout_80" android:layout_height="fill_parent" android:text="@string/click_bind" android:maxLines="1" />
        </LinearLayout>
        <TextView android:textColor="@color/colorBackground" android:id="@id/account_manager_gift" android:visibility="invisible" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="@dimen/layout_20" android:layout_marginTop="@dimen/layout_5" android:layout_marginRight="@dimen/layout_20" android:text="@string/bind_account_tip" />
        <LinearLayout android:orientation="horizontal" android:background="@drawable/edittext_bg" android:layout_width="fill_parent" android:layout_height="@dimen/layout_40" android:layout_marginLeft="@dimen/layout_20" android:layout_marginTop="@dimen/layout_5" android:layout_marginRight="@dimen/layout_20">
            <LinearLayout android:background="@color/colorEditBackground" android:layout_width="@dimen/layout_220" android:layout_height="fill_parent">
                <TextView android:textSize="@dimen/text_15" android:textColor="@color/colorHintText" android:ellipsize="middle" android:gravity="center_vertical" android:paddingRight="@dimen/layout_5" android:layout_width="0.0dip" android:layout_height="fill_parent" android:layout_marginLeft="@dimen/layout_5" android:text="@string/other_account" android:maxLines="1" android:layout_weight="3.0" />
                <TextView android:textSize="@dimen/text_15" android:textColor="@color/colorHintText" android:ellipsize="middle" android:gravity="center" android:id="@id/account_manager_other_state" android:layout_width="0.0dip" android:layout_height="fill_parent" android:layout_marginLeft="@dimen/layout_5" android:layout_marginRight="@dimen/layout_5" android:text="@string/not_bound" android:maxLines="1" android:layout_weight="3.0" />
            </LinearLayout>
            <Button android:textSize="@dimen/text_15" android:textColor="@color/colorTitleText" android:ellipsize="middle" android:id="@id/account_manager_bind_other" android:background="@mipmap/icon_button_bg2" android:layout_width="@dimen/layout_80" android:layout_height="fill_parent" android:text="@string/click_bind" android:maxLines="1" />
        </LinearLayout>
        <Button android:textSize="@dimen/text_15" android:textColor="@color/colorTitleText" android:layout_gravity="center" android:id="@id/account_manager_change" android:background="@drawable/button_bg1" android:layout_width="@dimen/layout_150" android:layout_height="@dimen/layout_40" android:layout_marginTop="@dimen/layout_15" android:text="@string/change_account" />
    </LinearLayout>
</LinearLayout>