<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:gravity="center" android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout android:orientation="vertical" android:background="@mipmap/icon_background1" android:layout_width="@dimen/layout_340" android:layout_height="@dimen/layout_300">
        <RelativeLayout android:layout_width="fill_parent" android:layout_height="@dimen/layout_55">
            <LinearLayout android:gravity="center_vertical" android:orientation="horizontal" android:id="@id/forget_password_back" android:layout_width="wrap_content" android:layout_height="@dimen/layout_18" android:layout_marginLeft="@dimen/layout_10" android:layout_marginTop="@dimen/layout_18">
                <ImageView android:layout_width="@dimen/layout_18" android:layout_height="@dimen/layout_18" android:src="@mipmap/icon_back" />
                <TextView android:textSize="@dimen/text_15" android:textColor="@color/colorTitleText" android:gravity="center_vertical" android:layout_gravity="center_vertical" android:layout_width="wrap_content" android:layout_height="fill_parent" android:text="@string/back" />
            </LinearLayout>
            <TextView android:textSize="@dimen/text_25" android:textColor="@color/colorTitleText" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="@dimen/layout_20" android:text="@string/forget_password" android:layout_centerInParent="true" />
        </RelativeLayout>
        <LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="fill_parent">
            <EditText android:textSize="@dimen/text_15" android:textColor="@color/black" android:textColorHint="@color/colorHintText" android:ellipsize="end" android:gravity="center" android:id="@id/forget_password_edit" android:background="@drawable/edittext_bg" android:layout_width="fill_parent" android:layout_height="@dimen/layout_50" android:layout_marginLeft="@dimen/layout_20" android:layout_marginTop="@dimen/layout_40" android:layout_marginRight="@dimen/layout_20" android:layout_marginBottom="@dimen/layout_10" android:hint="@string/edit_bind_account" android:maxLines="1" />
            <Button android:textSize="@dimen/text_20" android:textColor="@color/colorTitleText" android:gravity="center" android:id="@id/forget_password_reset" android:background="@drawable/button_bg1" android:layout_width="fill_parent" android:layout_height="@dimen/layout_50" android:layout_marginLeft="@dimen/layout_20" android:layout_marginTop="@dimen/layout_20" android:layout_marginRight="@dimen/layout_20" android:text="@string/reset_password" />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>